# AsynCUDA13.Api/Controllers/MediaController.cs
@@ -267,6 +267,37 @@ namespace AsynCUDA13.Api.Controllers
             }
         }
 
+        [HttpGet("image-preview/{idOrName}")]
+        public ActionResult<ImageData?> GetImagePreview(string idOrName, int maxDimenions = 256)
+        {
+            try
+            {
+                var image = Guid.TryParse(idOrName, out var guid) ? this.images[guid] : this.images[idOrName];
+                if (image == null)
+                {
+                    return this.NotFound(new ProblemDetails
+                    {
+                        Title = "Image not found",
+                        Detail = $"No image found with ID or name '{idOrName}'.",
+                        Status = 404
+                    });
+                }
+
+                var imagePreview = MediaDatasBuilder.BuildImagePreview(image, maxDimenions);
+                return this.Ok(imagePreview);
+            }
+            catch (Exception ex)
+            {
+                var pd = new ProblemDetails
+                {
+                    Title = "Error retrieving image preview",
+                    Detail = ex.Message,
+                    Status = 500
+                };
+                return this.StatusCode(500, pd);
+            }
+        }
+
         [HttpGet("audio-data/{idOrName}")]
         public ActionResult<AudioData?> GetAudioData(string idOrName, int chunkSize = 0, float overlap = 0.5f, bool keepData = true)
         {
@@ -297,6 +328,37 @@ namespace AsynCUDA13.Api.Controllers
                 return this.StatusCode(500, pd);
             }
         }
+
+        [HttpGet("audio-preview/{idOrName}")]
+        public ActionResult<ImageData?> GetAudioPreview(string idOrName, int width = 512, int height = 128)
+        {
+            try
+            {
+                var audio = Guid.TryParse(idOrName, out var guid) ? this.audios[guid] : this.audios[idOrName];
+                if (audio == null)
+                {
+                    return this.NotFound(new ProblemDetails
+                    {
+                        Title = "Audio not found",
+                        Detail = $"No audio found with ID or name '{idOrName}'.",
+                        Status = 404
+                    });
+                }
+                var audioPreview = MediaDatasBuilder.BuildAudioPreview(audio, width, height);
+                return this.Ok(audioPreview);
+            }
+            catch (Exception ex)
+            {
+                var pd = new ProblemDetails
+                {
+                    Title = "Error retrieving audio preview",
+                    Detail = ex.Message,
+                    Status = 500
+                };
+                return this.StatusCode(500, pd);
+            }
+        }
+
 
         [HttpDelete("delete/{idOrName}")]
         public ActionResult DeleteMedia(string idOrName)
